Fix cross itest containers and wiremock